2005-11-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: test if /etc/shadow already exists
	before trying to change it.
	fix typo.

2005-11-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): policy-rc.d: allow x11-common to run.
	337541

2005-11-03  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test-experimental.sh:
	* testsuite/run-test-experimental.log: experimental test no longer
	works since apt with gpg checking is default, remove it.
	
	* debian/TODO: remove todo item on /etc/mtab documentation.

	* Documentation/pbuilder-doc.xml: document /etc/mtab is a 
	symlink to /proc/mounts
	spellcheck.

	* debian/control (Depends): cdebootstrap or debootstrap

	* pbuilder-createbuildenv: change inconsistent error message
	Check and report error state when debootstrap specified in DEBOOTSTRAP option
	does not exist.

2005-11-02  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update.

	* pbuilder-modules: ln -s is protected with ||true, 
	since /etc/mtab may already exist.

	* debian/TODO: update TODO.

2005-10-28  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update.

	* Documentation/pbuilder-doc.xml: Update documentation on 
	pbuilder on amd64
	document TODO file.

2005-10-26  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update

	* testsuite/run-test.sh (testbuild): --resolve-deps removed.
	debootstrap 0.3.2 runs --resolve-deps per default.

2005-10-20  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: apply patch from Jonas Smedegaard (#312121)
	and change -P to -[bB]

2005-10-19  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (testbuild): Change to use resolve-deps in testsuite for 
	debootstrap.

2005-10-18  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: updated TODO file; with hopefully a better tracking of debian bugs.

2005-10-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation to include 